--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.21.1",
     "eslint-plugin-sonarjs": "^0.11.0",
     "history": "^4.7.2",
@@ -18,6 +19,7 @@
     "react-logger": "^1.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "websocket-extensions": ">=0.1.4"
   },
   "scripts": {
